# realtime-detect-server

./: .gitignore  Procfile  README.md  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
app/: highlight_violation.py  main.py  signaling.py  stream_receiver.py  task_queue.py
db/: docker-compose.dev.yml
